--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -41,7 +41,7 @@
             <li class="alert alert-danger" role="alert" th:if="${!#strings.isEmpty(errorMessage)}"
                 th:text="${errorMessage}" />
             <div class="overview-wrap">
-                <h3 class="heading-21921" th:text="${eazyClass.name} + ' Students Details'"></h3>
+                <h3 class="heading-21921" th:text="${mgClass.name} + ' Students Details'"></h3>
                 <button class="btn btn-style btn-style-3 text-left" type="button"
                         data-bs-toggle="modal" data-bs-target="#addStudent">ADD STUDENT</button>
             </div>
@@ -82,7 +82,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="person: ${eazyClass.persons}">
+            <tr th:each="person: ${mgClass.persons}">
                 <td th:text="${person.name}"></td>
                 <td th:text="${person.email}"></td>
                 <td th:text="${person.mobileNumber}"></td>
